--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -34,16 +34,16 @@
   "password": "Password",
   "forgetPassword": "Forget Password ?",
   "haveAccount": "Haven't you an account?",
-  "teacher":"Teacher",
-  "student": "Student",
+  "Teacher":"Teacher",
+  "Student": "Student",
   "video": "Video",
   "url": "Url",
 "qualificationEducation": "Qualification Education",
   "lecture": "Lecture",
-  "assistant": "Assistant",
+  "Assistant": "Assistant",
   "school": "School",
-  "parent": "Parent",
-  "professionalCourse": "Professional Course",
+  "Parent": "Parent",
+  "ProfessionalCourse": "Professional Course",
   "chooseRole": "Choose your role",
   "continue": "Continue",
   "orSignUp": "Or Sign Up By",
@@ -93,5 +93,6 @@
   "phoneError":	"Invalid phone number",
   "passwordError":"Password must be more than 6 character",
   "notificationTitle": "Notification",
-  "schedule": "The Schedule"
+  "schedule": "The Schedule",
+  "otpCodeError": "Otp Code must be 4 character"
 }
